[package]
name = "sgx-quote"
version = "0.0.9"
description = "Zero-copy Intel SGX quote parser using nom."
license = "Apache-2.0/MIT"
repository = "https://github.com/nhynes/sgx-quote"
authors = ["Nick Hynes <nhynes@nhynes.com>"]
keywords = ["sgx", "attestation", "dcap"]
edition = "2018"

[dependencies]
nom = "5.0"
